Update codebase based on schemas version 0.3.1
